// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SearchAccountPage Component should render SearchAccountPage component 1`] = `
<div>
  <div
    data-testid="MockPage"
  />
</div>
`;

exports[`SearchAccountPage Component should render with different accessToken 1`] = `
<div>
  <div
    data-testid="MockPage"
  />
</div>
`;

exports[`SearchAccountPage getLayout should wrap page with DefaultLayout and ErrorBoundary 1`] = `
<div>
  <div
    data-testid="DefaultLayout"
  >
    <div
      data-testid="ErrorBoundary"
    >
      <div
        data-testid="MockPage"
      />
    </div>
  </div>
</div>
`;
